# solutions

./: README.md
prolog/: numbers.pl
python/: a.py  shell.nix
rust/: Cargo.toml  shell.nix
rust/src/: audio.rs  bytes.rs  curvefit.rs  data.rs  images.rs  main.rs  math.rs  numbers.rs  qr.rs  schizo.rs  video.rs
