[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
base64_crate = { package = "base64", version = "0.21.7" }
image = "0.24.7"
num = { version = "0.4.1", features = ["num-bigint"] }
