[package]
name = "neuro-arg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
base64_crate = { package = "base64", version = "0.21.7" }
image = "0.24.7"
itertools = "0.12.0"
num = { version = "0.4.1", features = ["num-bigint"] }
hound = "3.5.1"
rustfft = "6.2.0"
ffmpeg = { package = "ffmpeg-next", version = "6", optional = true }
# rav1e = { version = "0.7.1", default-features = false, optional = true }
# ivf = { version = "0.1.3", optional = true }

[features]
video = [
  "ffmpeg",
  # "rav1e",
  # "ivf",
]
# default = ["video"]
